forms-flow-theme/scss/v8-scss/_theme.scss
/*|||*════════════════════════════════════ ⬥ VERSION 8 THEME ⬥ ════════════════════════════════════*||||*/
@use "mixins";



/*=================== Color Tokens | Version 8 Redesign ===================*/

$brand-colors: (
 primary:        #F1EEFF,
 primary-dark:   #B8ABFF,
 secondary:      #EDEDED,
 secondary-dark: #525254
);

$base-colors: (
 yellow: #EFC005,
 green:  #00C49A,
 cyan:   #00BCD4,
 blue:   #0087D9,
 orange: #FF9100,
 vivid:  #7C80FE,
 red:    #E57373,
 indigo: #3248F4
);

$neutral-colors: (
 gray-darkest:      #4A4A4A,
 gray-dark:         #7C7D7F,
 gray-medium-dark:  #B7B7B8,
 gray-medium:       #D1D2D3,
 gray-light:        #D9D9D9,
 gray-x-light:      #E5E5E5,
 gray-xx-light:     #DAD9DA,
 white-100:         #F6F6F6,
 white-200:         #FCFCFC,
 white-300:         #FFFFFF
);

//To create variants of base colors.
$opacities: (
 100: 1,    // solid
 200: 0.5,  // 50%
 300: 0.25  // 25%
);

// Helper: Blend with a white background [ To achieve exact variants of figma ] 
@function blend-with-white-to-hex($color, $opacity) {
 $white: #fff;
 $new-r: round((red($color) * $opacity) + (red($white) * (1 - $opacity)));
 $new-g: round((green($color) * $opacity) + (green($white) * (1 - $opacity)));
 $new-b: round((blue($color) * $opacity) + (blue($white) * (1 - $opacity)));

 @return rgb($new-r, $new-g, $new-b); 
}



/* /*=================== Typography Tokens | Version 8 Redesign /*===================*/

/*These are basic variables for font don't use it directly, insted use the mixin : @include font-style($font-size-20, $font-weight-semibold);
in your classes.
An example has given at the bottom of this section */

// Font: Figtree (Google Fonts)

$font-tokens: (
  font-family-base: '"Figtree", sans-serif',

  font-weight-light: 300,
  font-weight-regular: 400,
  font-weight-medium: 500,
  font-weight-semibold: 600,

  line-height-default: 100%,
  letter-spacing-default: 0%,

  font-size-xl: 20px,
  font-size-l: 18px,
  font-size-m: 15px,
  font-size-s: 12px,
  font-size-xs: 10px
);



/*************************************** [ ROOT VARIABLES ] ***************************************/


:root {

  // //for navbar
  
  --nav-bg-color: var(--white-100);
  --navbar-menu-font-color: var(--secondary-dark);
  --navbar-submenu-font-color: var(--gray-dark);

/*══════════════════ ⬥ COLOUR UTILITIES | VERSION 8 ⬥ ══════════════════*/

   @each $name, $color in $base-colors {
     @each $variant, $alpha in $opacities {
        --#{"#{$name}"}-#{$variant}: #{blend-with-white-to-hex($color, $alpha)};
     }
   }
    // Brand colors
   @each $name, $color in $brand-colors {
     --#{$name}: #{$color};
   }
    // Neutrals
   @each $name, $color in $neutral-colors {
     --#{$name}: #{$color};
   }

   // Colour variables available ar runtime: [ USE IT IN CLASS USING var() ]

    /* Brand colors */
        // --primary: #F1EEFF;
        // --primary-dark: #B8ABFF;
        // --secondary: #EDEDED;
        // --secondary-dark: #525254;

    /* Neutral colors */
        // --gray-darkest: #4A4A4A;
        // --gray-dark: #7C7D7F;
        // --gray-medium-dark: #B7B7B8;
        // --gray-medium: #D1D2D3;
        // --gray-light: #D9D9D9;
        // --gray-x-light: #E5E5E5;
        // --white-100: #F6F6F6;
        // --white-200: #FCFCFC;
        // --white-300: #FFFFFF;

    /* Base colors + opacity variants */
        // --yellow-100: #EFC005;
        // --yellow-200: #F7DD80;
        // --yellow-300: #F7EFCB;

        // --green-100: #00C49A;
        // --green-200: #80E2C4;
        // --green-300: #BFEFF0;

        // --cyan-100: #00BCD4;
        // --cyan-200: #80DEE5;
        // --cyan-300: #BFF3F4;

        // --blue-100: #0087D9;
        // --blue-200: #80C0E9;
        // --blue-300: #BFDFF4;

        // --orange-100: #FF9100;
        // --orange-200: #FFC880;
        // --orange-300: #FFDEBF;

        // --vivid-100: #7C80FE;
        // --vivid-200: #BCBFFF;
        // --vivid-300: #DEDCFF;

        // --red-100: #E57373;
        // --red-200: #F2B1B1;
        // --red-300: #F7D0D0;

        // --indigo-100: #3248F4;
        // --indigo-200: #99A4F8;
        // --indigo-300: #CAD2FB;

//Semantic Colors

    --progress-bar-bg-color : var(--primary-dark);
    --main-bg: var(--white-300);


/*══════════════════ ⬥ FONT UTILITIES | VERSION 8 ⬥ ══════════════════*/

   @each $name, $value in $font-tokens {
    --#{$name}: #{$value};
  }
    //font variables available on runtime: 
    //==> use the font-weight and size in the mixin.
  
        // --font-family-base: "Figtree", sans-serif;

        // --font-weight-light: 300;
        // --font-weight-regular: 400;
        // --font-weight-medium: 500;
        // --font-weight-semibold: 600;

        // --font-size-xl: 20px;
        // --font-size-l: 18px;
        // --font-size-m: 15px;
        // --font-size-s: 12px;
        // --font-size-xs: 10px;

        // --line-height-default: 100%;
        // --letter-spacing-default: 0%;

    //EXAMPLE USE OF FONT MIXIN IN CLASS
        // .title {
        //   @include font-style(--font-size-xl, --font-weight-semibold, --red-100  );
        // }


 
/*══════════════════ ⬥ SPACING TOKENS | VERSION 8 ⬥ ══════════════════*/

 --spacer-025: 0.25rem;
 --spacer-050: 0.5rem;
 --spacer-075: 0.75rem;
 --spacer-100: 1rem;
 --spacer-125: 1.25rem;
 --spacer-150: 1.5rem;
 --spacer-175: 1.75rem;
 --spacer-200: 2rem;
 --spacer-225: 2.25rem;
 --spacer-250: 2.5rem;
 --spacer-275: 2.75rem;
 --spacer-300: 3rem;

 --border-radius: 0.3125rem; //5px
 --navbar-width:3rem;
 --body-section-height: 80vh; //update dynamically for the pages.



}



/* ============================
   BASE CONTAINER:  GRID SYSTEM
   ============================ */
   .base-container {
    display: grid;
    grid-template-columns: auto 1fr; // sidebar + main content
    width: 100%;
    min-height: 100vh;    
    box-sizing: border-box; 
    background-color: var(--main-bg);
 
    .nav-space{
      grid-column: 1;
      height: 100vh;
      display: flex;
      flex-direction: column;
      transition: width 0.5s ease;
      overflow: hidden;
      width: var(--navbar-width);
    }

    .page-container {
      @include mixins.vertical-padding();
      grid-column: 2;
      display: flex;
      justify-content: center;  // center inner page-layout horizontally
      align-items: flex-start;  // vertical alignment at top
      width: 100%;
      min-height: 100vh;
      margin: 0;
  
      .page-layout {
        /* Inner page layout wrapper */
        width: 1088px;         
        flex-shrink: 0;         
        flex-grow: 0;
        display: grid;          // allows toast/header/body grid
        grid-template-rows: 6fr; // toast + headers + body
        grid-template-columns: 1fr;
        padding: 0;
        box-sizing: border-box;
  
        .toast-section {
          @include mixins.rowLayout(72px, center, 1);
        }
  
        .header-section-1 {
          @include mixins.rowLayout(72px, space-between, 2);
        }
  
        .header-section-2 {
          @include mixins.rowLayout(72px, space-between, 3);
        }
  
        .header-section-3 {
          @include mixins.rowLayout(72px, space-between, 4);
        }
  
        .header-section-4 {
          @include mixins.rowLayout($gridRow: 5);
        }

        // for the tables and other main contents
        .body-section {
          @include mixins.vertical-padding();
          grid-row: 6;
          padding: 1rem 0;
          max-height: var(--body-section-height); // need to be updated after while implementing inner contets. 
          overflow-y: auto;
          &.formedit-layout {
              overflow-y: auto;
              overflow-x: hidden;
              max-width: 100%;
              box-sizing: border-box;
              max-height: calc(100vh - 200px);
              width: 1088px;
            }
        }
  
        .section-seperation-left {
          @include mixins.componetAlign;
          justify-content: flex-start;
        }
  
        .section-seperation-right {
          @include mixins.componetAlign;
          justify-content: flex-end;
        }
      }
    }
  }
  

